--- a/Templates/user/signup.html
+++ b/Templates/user/signup.html
@@ -13,10 +13,15 @@
 						<input type="text" class="form-control" name="username" placeholder="Username">
 					</div>
 					
-					<!--div class="form-holder">
-						<span class="lnr lnr-phone-handset"></span>
-						<input type="text" class="form-control" placeholder="Phone Number">
-					</div-->
+					<div class="form-holder">
+						<span class="lnr lnr-user"></span>
+						<input type="text" class="form-control" name="first_name" placeholder="First Name">
+					</div>
+
+					<div class="form-holder">
+						<span class="lnr lnr-user"></span>
+						<input type="text" class="form-control" name="last_name" placeholder="Last Name">
+					</div>
 					
 					<div class="form-holder">
 						<span class="lnr lnr-envelope"></span>
