--- a/Templates/post/base.html
+++ b/Templates/post/base.html
@@ -64,7 +64,7 @@
                      <li><a href="#">[About Us]</a></li>
                   
                      {% if request.user.is_authenticated %} 
-                        <li class="has-children"><a href="#">[UserName]</a>
+                        <li class="has-children"><a href="#">{{ request.user.first_name|capfirst }}</a>
                            
                            <ul>
                            <li><a href="#">[My Post]</a></li>
