--- a/Templates/post/base.html
+++ b/Templates/post/base.html
@@ -69,7 +69,7 @@
                            <ul>
                            <li><a href="#">[My Post]</a></li>
                            <li><a href="#">[Profile] 02</a></li>
-                           <li><a href="#">[Log Out]</a></li>
+                           <li><a href="{% url 'logout' %}">Log Out</a></li>
                            </ul>
                         
                         </li>
@@ -90,6 +90,7 @@
     <!-- Content
    ================================================== -->
 <div id="content-wrap">
+{% include 'post/messages.html' %}
 <div class="row">
 <div id="main" class="eight columns">
     {% block content %}
