--- a/Templates/post/categories.html
+++ b/Templates/post/categories.html
@@ -2,7 +2,12 @@
     <h3>Categories</h3> 
         <ul>
             {% for category in categories %}
-            <li><a href="{% url 'post-category' category.category %}" title="">{{ category }}</a> ({{ categories_count }})</li>	
+            <li>
+                <a href="{% url 'post-category' category.category %}" title="">
+                    {{ category }}
+                </a> 
+                ({{ category.post_set.all.count }})
+            </li>	
             {% endfor %}				
         </ul>
 </div>
