--- a/Templates/post/base.html
+++ b/Templates/post/base.html
@@ -33,143 +33,33 @@
 
 </head>
 <body>
-
-    <!--Header-->
-    <header id="top">
- 
-        <div class="row">
- 
-            <div class="header-content twelve columns">
- 
-               <h1 id="logo-text"><a href="{% url 'blog-home' %}" title="">Tech Blog</a></h1>
-               <p id="intro">Welcome geeks to the world of techies!</p>
- 
-             </div>			
- 
-        </div>
- 
-        <nav id="nav-wrap"> 
- 
-            <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show Menu</a>
-            <a class="mobile-btn" href="#" title="Hide navigation">Hide Menu</a>
- 
-            <div class="row">    		            
- 
-                  <ul id="nav" class="nav">
-                     
-                     <li class="current">
-                        <a href="{% url 'blog-home' %}">Home</a>
-                     </li>
-                     
-                     <li><a href="#">[About Us]</a></li>
-                  
-                     {% if request.user.is_authenticated %} 
-                        <li class="has-children"><a href="#">{{ request.user.first_name|capfirst }}</a>
-                           
-                           <ul>
-                           <li><a href="#">[My Post]</a></li>
-                           <li><a href="#">[Profile] 02</a></li>
-                           <li><a href="{% url 'logout' %}">Log Out</a></li>
-                           </ul>
-                        
-                        </li>
-                     {% else %}
-                        <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                        <li><a href="{% url 'login' %}">Login</a></li>
-                     {% endif %}        
-                        
-                     {% if request.user.is_authenticated %}
-                        <li><a href="{% url 'create-post' request.user.username %}">Create Blog</a></li>
-                     {% endif %}      
-                  
-                  </ul> <!-- end #nav -->			   	 
-            
-            </div> 
-      </nav> <!-- end #nav-wrap --> 	     
-    </header> <!-- Header End -->
-    <!-- Content
+   <!-- Navbar
    ================================================== -->
-<div id="content-wrap">
-{% include 'post/messages.html' %}
-<div class="row">
-<div id="main" class="eight columns">
-    {% block content %}
+   {% include 'post/navbar.html' %}
+   <!--Navbar Closed-->
 
-    {% endblock content %}
-</div>
+   <!-- Content
+   ================================================== -->
+   <div id="content-wrap">
    
-   {% include 'post/sidebar.html' %}
+   <div class="row">
+   
+   <div id="main" class="eight columns">
+      {% block content %}
 
-</div> <!-- end row -->
+      {% endblock content %}
+   </div> <!-- end main -->
+   
+      {% include 'post/sidebar.html' %}
 
-</div> <!-- end content-wrap -->
+   </div> <!-- end row -->
+
+   </div> <!-- end content-wrap -->
 
 <!-- Footer
 ================================================== -->
-<footer>
-
-    <!--div class="row"> 
-
-        <div class="twelve columns">	
-            <ul class="social-links">
-             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>               
-             <li><a href="#"><i class="fa fa-github-square"></i></a></li>
-             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-             <li><a href="#"><i class="fa fa-flickr"></i></a></li>               
-             <li><a href="#"><i class="fa fa-skype"></i></a></li>
-          </ul>			
-        </div-->
-        
-       <div class="six columns info">
-
-          <h3>About Keep It Simple</h3> 
-
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-          Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-          nibh id elit. 
-          </p>
-
-          <p>Lorem ipsum Sed nulla deserunt voluptate elit occaecat culpa cupidatat sit irure sint 
-          sint incididunt cupidatat esse in Ut sed commodo tempor consequat culpa fugiat incididunt.</p>
-
-       </div>
-
-       <div class="four columns">
-
-          <h3>Photostream</h3>
-          
-          <ul class="photostream group">
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-             <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-          </ul>           
-
-       </div>
-
-       <div class="two columns">
-          <h3 class="social">Navigate</h3>
-
-          <ul class="navigate group">
-             <li><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">[User Name]</a></li>
-          </ul>
-       </div>
-
-       <p class="copyright">&copy; Copyright 2014 Keep It Simple. &nbsp; Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>.</p>
-      
-    </div> <!-- End row -->
-
-    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-chevron-up"></i></a></div>
-
-</footer> <!-- End Footer-->
+   {% include 'post/footer.html' %}
+<!--Footer Closed-->
 
 <!-- Java Script
 ================================================== -->
