--- a/Templates/post/categories.html
+++ b/Templates/post/categories.html
@@ -1,4 +1,5 @@
 <div class="widget widget_categories group">
+{% if categories %}
     <h3>Categories</h3> 
         <ul>
             {% for category in categories %}
@@ -10,4 +11,5 @@
             </li>	
             {% endfor %}				
         </ul>
+{% endif %}
 </div>
