--- a/Templates/post/home.html
+++ b/Templates/post/home.html
@@ -1,5 +1,6 @@
 {% extends 'post/base.html' %}
 {% load static %}
+{% include 'post/messages.html' %}
 {% block content %}
    <!-- Content
    ================================================== -->
