--- a/Templates/post/messages.html
+++ b/Templates/post/messages.html
@@ -1,5 +1,10 @@
 {% if messages %}
     {% for message in messages %}
-        {{ message|safe }}
+    <div id="message-group">
+        <span id="message">
+            {{ message }}
+        </span>
+    </div>    
     {% endfor %}
 {% endif %}
+<script src="{% static 'js/message.js' %}"></script>
