--- a/Templates/post/CreatePost.html
+++ b/Templates/post/CreatePost.html
@@ -1,6 +1,7 @@
 {% extends 'post/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% include 'post/messages.html' %}
 {% block content %}
 <div class="respond">
     <h1>Create Blog</h1>
