--- a/Templates/post/base.html
+++ b/Templates/post/base.html
@@ -1,9 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js ie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
 
    <!--- Basic Page Needs
@@ -35,7 +32,7 @@
 <body>
    <!-- Navbar
    ================================================== -->
-   {% include 'post/navbar.html' %}
+   {% include 'post/navbar.html' %} <!--Including navigation bar-->
    <!--Navbar Closed-->
 
    <!-- Content
@@ -50,7 +47,7 @@
       {% endblock content %}
    </div> <!-- end main -->
    
-      {% include 'post/sidebar.html' %}
+   {% include 'post/sidebar.html' %} <!--Including side bar-->
 
    </div> <!-- end row -->
 
@@ -58,7 +55,7 @@
 
 <!-- Footer
 ================================================== -->
-   {% include 'post/footer.html' %}
+   {% include 'post/footer.html' %} <!--Including footer-->
 <!--Footer Closed-->
 
 <!-- Java Script
