--- a/Templates/post/CreatePost.html
+++ b/Templates/post/CreatePost.html
@@ -39,6 +39,6 @@
         
     </fieldset>
     </form> <!-- Form End -->
-</div> <!-- Respond End -->s
+</div> <!-- Respond End -->
 {% endblock content %}
 <!--<span class="required"> *</span>-->
