--- a/Templates/post/sidebar.html
+++ b/Templates/post/sidebar.html
@@ -19,19 +19,7 @@
             sint cillum sint consectetur voluptate adipisicing Duis irure magna ut sit amet reprehenderit.</p>
     </div>
     
-    <div class="widget widget_tags">
-        <h3>Post Tags.</h3>
-    <div class="tagcloud group">
-        <a href="#">Corporate</a>
-        <a href="#">Onepage</a>
-        <a href="#">Agency</a>
-        <a href="#">Multipurpose</a>
-        <a href="#">Blog</a>
-        <a href="#">Landing Page</a>
-        <a href="#">Resume</a>
-    </div>
-           
-    </div>
+    {% include 'post/tags.html' %}
 
     <div class="widget widget_popular">
         <h3>Popular Post.</h3>
