--- a/Templates/post/CategoryWisePost.html
+++ b/Templates/post/CategoryWisePost.html
@@ -1,16 +1,31 @@
 {% extends 'post/base.html' %}
 {% load static %}
 {% block content %}
-<section class="page">					
-	<h1>{{ category }}</h1> 												
-	<div class="row archive-list">
-        <div class="twelve columns">	
-			<ul>
-                {% for post in posts %}
-	      		<li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
-                {% endfor %}			
-			</ul>								
-		</div>
-    </div>
-</section>
+	{% if category %}
+		<section class="page">					
+			<h1>{{ category }}</h1> 												
+			<div class="row archive-list">
+				<div class="twelve columns">	
+					<ul>
+						{% for post in posts %}
+						<li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
+						{% endfor %}			
+					</ul>								
+				</div>
+			</div>
+		</section>
+	{% else %}
+		<section class="page">					
+			<h1>Post tagged with: {{ tag.name }}</h1> 												
+			<div class="row archive-list">
+				<div class="twelve columns">	
+					<ul>
+						{% for post in posts %}
+						<li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
+						{% endfor %}			
+					</ul>								
+				</div>
+			</div>
+		</section>
+	{% endif %}
 {% endblock content %}
