--- a/Templates/post/CreatePost.html
+++ b/Templates/post/CreatePost.html
@@ -12,7 +12,7 @@
         
         <div class="group">
             <label for="cName">Title <span class="required"> *</span></label>
-            <input name="title" type="text" id="title" size="80" class="title" value="Add a title for your post.">
+            <input name="title" type="text" id="title" size="80" class="title" placeholder="Add a title for your post.">
         </div>
         
         <div class="group">
@@ -21,7 +21,7 @@
 
         <div class="message group">
             <label for="cMessage">Content <span class="required">*</span></label>
-            <textarea name="content"  id="content" class="content" rows="10" cols="80" value="Add content for your post.">
+            <textarea name="content" id="cMessage" rows="10" cols="80" placeholder="Add content for your post.">
             </textarea>
         </div>
 
@@ -32,7 +32,7 @@
 
         <div class="group">
             <label for="cName">Add Tags </label>
-            <input name="tag" type="text" id="tag" size="80" class="title" value="Add comma separated tags on your post.">
+            <input name="tag" type="text" id="tag" size="80" class="title" placeholder="Add comma separated tags on your post.">
         </div>
         
         <button type="submit" class="submit">Submit</button>
