--- a/Templates/post/footer.html
+++ b/Templates/post/footer.html
@@ -31,7 +31,7 @@
 
        <div class="four columns">
 
-          <h3>Photostream</h3>
+          <!--h3>Photostream</h3>
           
           <ul class="photostream group">
              <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
@@ -42,7 +42,7 @@
              <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
              <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
              <li><a href="#"><img alt="thumbnail" src="{% static 'images/thumb.jpg' %}"></a></li>
-          </ul>           
+          </ul-->           
 
        </div>
 
@@ -50,9 +50,9 @@
           <h3 class="social">Navigate</h3>
 
           <ul class="navigate group">
-             <li><a href="#">Home</a></li>
+             <li><a href="{% url 'blog-home' %}">Home</a></li>
              <li><a href="#">About</a></li>
-             <li><a href="#">User Name</a></li>
+             <li><a href="#">{{ request.user.first_name|capfirst }}</a></li>
           </ul>
        </div>
 
