--- a/Templates/post/postPerCategory.html
+++ b/Templates/post/postPerCategory.html
@@ -17,9 +17,9 @@
 				<h4>Posts you have made.</h4>	
 				<ul>
                 	{% for post in user_post %}
-				      	<li><a href="#">{{ post.title }}</a></li>
+				      	<li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
 						<a class="button" id='delete-button' href="#">Delete</a>
-						<a class="button" href="#">Update</a>
+						<a class="button" href="{% url 'update-post' post.id %}">Update</a>
                     {% endfor %}
 				</ul>								
 			</div>
