--- a/Templates/post/postPerCategory.html
+++ b/Templates/post/postPerCategory.html
@@ -16,12 +16,12 @@
 			<div class="twelve columns">
 				<h4>Posts you have made.</h4>	
 				<ul>
-                	{% for post in user_post %}
-				      	<li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
-						<a class="button" id='delete-button' href="#">Delete</a>
-						<a class="button" href="{% url 'update-post' post.id %}">Update</a>
-                    {% endfor %}
-				</ul>								
+                            {% for post in user_post %}
+                                <li><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></li>
+                                <a class="button" id='delete-button' href="{% url 'delete-post' post.id %}">Delete</a>
+                                <a class="button" href="{% url 'update-post' post.id %}">Update</a>
+                            {% endfor %}
+                </ul>							
 			</div>
 		</div> <!-- end row -->			      	
 	
@@ -52,15 +52,6 @@
     <hr>
 {% endif %}
 
-<script>
-	document.getElementById('delete-button').addEventListener('click', deletePost);
-	function deletePost(){
-		const val = window.confirm("Do you want to delete the post?");
-		if (val==true)
-			console.log('Deleted');
-		else
-			console.log('Not deleted');
-	}
-</script>
+
 
 {% endblock %}
