--- a/Templates/user/signup.html
+++ b/Templates/user/signup.html
@@ -41,9 +41,10 @@
 					<button>
 						<span>Register</span>
 					</button>
-				</form>
+				</form>Already have an account with us?
 				<img src="{% static 'user/images/image-2.png' %}" alt="" class="image-2">
+				
 			</div>
-			
+		
 		</div>
 {% endblock content %}
