--- a/Templates/user/signup.html
+++ b/Templates/user/signup.html
@@ -41,7 +41,7 @@
 					<button>
 						<span>Register</span>
 					</button>
-				</form>Already have an account with us?
+				</form>
 				<img src="{% static 'user/images/image-2.png' %}" alt="" class="image-2">
 				
 			</div>
