--- a/Templates/user/login.html
+++ b/Templates/user/login.html
@@ -21,7 +21,7 @@
 						<span>Login</span>
 					</button>
                     <br>
-                    &nbsp; &nbsp; &nbsp; Do not have an account with us? &nbsp; <a href="#">SignUp</a>
+                    &nbsp; &nbsp; &nbsp; Do not have an account with us? &nbsp; <a href="{% url 'signup' %}">SignUp</a>
 				</form>
                 
 				<img src="{% static 'user/images/image-2.png' %}" alt="" class="image-2">
