--- a/Templates/user/signup.html
+++ b/Templates/user/signup.html
@@ -41,6 +41,10 @@
 					<button>
 						<span>Register</span>
 					</button>
+					<strong>
+						<center>Already having an account with us? <a href="{% url 'login' %}">Login</a></center>
+					</strong>
+						
 				</form>
 				<img src="{% static 'user/images/image-2.png' %}" alt="" class="image-2">
 				
