--- a/Templates/post/footer.html
+++ b/Templates/post/footer.html
@@ -19,13 +19,13 @@
 
           <h3>About Keep It Simple</h3> 
 
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-          Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-          nibh id elit. 
+          <p>This is a blogging website developed and maintained by Sugata Kar. You can post your favourite blog post, 
+          go through other users blog and comment on post.
           </p>
 
-          <p>Lorem ipsum Sed nulla deserunt voluptate elit occaecat culpa cupidatat sit irure sint 
-          sint incididunt cupidatat esse in Ut sed commodo tempor consequat culpa fugiat incididunt.</p>
+          <p>
+            Hope you will found useful!
+          </p>
 
        </div>
 
@@ -56,7 +56,7 @@
           </ul>
        </div>
 
-       <p class="copyright">&copy; Copyright 2014 Keep It Simple. &nbsp; Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>.</p>
+       <p class="copyright">&copy; Copyright 2020 Tech Blog. &nbsp; Design and Developed by Sugata Kar .</p>
       
     </div> <!-- End row -->
 
